github sites compat

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Osc3</title>
-  <script src="./scripts/index.js" type="module"></script>
+  <script src="src/scripts/index.js" type="module"></script>
 </head>
 <body>
   <button id="start">start</button>
